# collie-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  wendy.json
src/collie_demo/: __init__.py  app.py  camera.py  controller.py  detector.py  fruit.py  fruit_server.py  fruit_webcam.py  heading.py  main.py  matcher.py  memory.py  mission.py  motion.py  runtime.py  supervisor.py  types.py
tests/: test_app.py  test_camera.py  test_class_matcher.py  test_controller.py  test_detector.py  test_fruit.py  test_heading.py  test_main.py  test_memory_matcher.py  test_motion.py  test_runtime.py  test_supervisor.py  test_web_ui.py
tools/: benchmark_fruit_models.py  build_visual_prompt_weights.py
web/: fruit.html  index.html
